src/App.css
@import url('https://fonts.googleapis.com/css2?family=Jaro&display=swap');

:root{
  /* Refers to the dimensions of the home page image component within the web page. Everything else is scaled relative to it*/
  /* Components need to be scaled in integers because of the use of pixel-art images */
  /* Variables are updated in JavaScript whenever a user resizes the page */
  --baseWidth: 320px;
  --baseHeight: 180px;
  --scale: 2;
  /* topPadding is constant, sectionGap scaled */
  --topPadding: 100px;
  --sectionGap: 130px;

  /* Layers */
  --mainLayer: 5;

  /* Layout */
  --cardGap: 7px;

  /* Colors */
  --lightestBlue : #76b4cc;
  --lightBlue: #6893b3;
  --blue: #5f7799;
  --darkBlue: #4d5880;
  --darkerBlue: #444966;
  --darkestBlue: #1C1E2B;
  --orange: #c97c55;
  --lightRed: #ab5a48;
  --red: #913d3d;
  --darkRed: #783642;
  --bluishBlack: #05050a;
  --black: #0C0C14;
  --white: #d8e6e8;
  --grey: #a2adb8;
  --darkGrey: #878c99;
  --darkestGrey: #707180;
  --yellow: #cca681;
  --green: #50a371;
}

@media (max-width: 680px) {
  :root {
    --scale: 1
  }
}

/* General Styles */
html {
  scroll-behavior: smooth;
  scroll-padding-top: 100px;
}

body {
  margin: 0;
  box-sizing: border-box;
  font-family: 'Jaro', sans-serif;
  font-size: 1.6vw;
  color: var(--white);
  background-color: var(--black);
}

a {
  text-decoration: none;
  color: inherit;
}

button {
  border: none;
  background-color: transparent;
  padding: 0px 0px;
  font: inherit;
  font-size: inherit;
  color: inherit;
}

button:hover {
  cursor: pointer;
}

button:disabled {
  cursor: default;
}

label {
  display: block;
}

form {
  display: flex;
  flex-direction: column;
  gap: 2%;
  width: 100%;
  height: 90%;
}

input {
  border: none;
  box-sizing: border-box;
  background-color: var(--darkestBlue);
  width: 100%;
  height: max(26px, calc(13px * var(--scale)));
  font: inherit;
  font-size: inherit;
  color: var(--grey);
 
}

textarea {
  border: none;
  box-sizing: border-box;
  background-color: var(--darkestBlue);
  width: 100%;
  height: max(206px, calc(103px * var(--scale)));
  resize: none;
  font: inherit;
  font-size: inherit;
  color: var(--grey);
  
}

input::placeholder, textarea::placeholder {
  color: #707180;
}

input:focus, textarea:focus {
  outline: none;
  border: 1px solid var(--white);
}

/* Anims */
.fadeInFastest{
  animation: fadeIn .3s ease forwards;
}

.fadeInFast{
  animation: fadeIn .5s ease forwards;
}

.fadeIn{
  animation: fadeIn .8s ease forwards;
}

.fadeInSlow{
  animation: fadeIn 1.25s ease forwards;
}

/* Colors */
.lightestBlue {
  --color: var(--lightestBlue);
  --shadow: var(--blue);
  --darkShadow: var(--darkBlue);
  --highlight: var(--lightBlue);
  color: var(--color);
}

.lightBlue {
  --color: var(--lightBlue);
  --shadow: var(--blue);
  --darkShadow: var(--darkBlue);
  --highlight: var(--lightestBlue);
  color: var(--color);
}

.blue {
  --color: var(--blue);
  --darkShadow: var(--darkestBlue);
  --shadow: var(--darkerBlue);
  --highlight: var(--blue);
  color: var(--color);
}

.darkBlue {
  --color: var(--darkestBlue);
  --darkShadow: var(--black);
  --shadow: var(--bluishBlack);
  --highlight: var(--darkerBlue);
  color: var(--color);
}

.black {
  --color: var(--black);
  --highlight: var(--black);
  --shadow: var(--black);
  --darkShadow: var(--black);
  color: var(--color);
}

.white {
  --color: var(--white);
  --highlight: var(--white);
  --shadow: var(--white);
  --darkShadow: var(--white);
  color: var(--white);
}

.grey{
  --color: var(--grey);
  --shadow: var(--darkGrey);
  --darkShadow: var(--darkestGrey);
  --highlight: var(--grey);
  color: var(--color);
}

.yellow {
  --color: var(--yellow);
  --highlight: var(--yellow);
  color: var(--color);
}

.green {
  --color: var(--green);
  --shadow: var(--green);
  --darkShadow: var(--green);
  --highlight: var(--green);
  color: var(---green);
}

.orange{
  --color: var(--orange);
  --highlight: var(--orange);
  color: var(--color)
}

.lightRed {
  --color: var(--lightRed);
  --highlight: var(--orange);
  --shadow: var(--red);
  --darkShadow: var(--darkRed);
  color: var(--color);

}
.red {
  --color: var(--red);
  --highlight: var(--lightRed);
  --shadow: var(--darkRed);
  color: var(--color)
}

/* Glow */
.radialGlow{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: radial-gradient(circle, rgb(from var(--highlight, var(--white)) r g b / 70%), rgb(from var(--highlight, var(--white)) r g b / 20%));
  filter: blur(10px);
  z-index: 0;
  border-radius: 90%;
  pointer-events: none;
}

.textGlow{
  text-shadow: 0 0 20px var(--highlight, var(--lightestBlue));
}

/* Transparency */
.transparent{
  opacity: 0;
}

.opaque {
  opacity: 1;
}

/* Fonts */
.title {
  font-size: 20px;
}

.subtitle{
  font-size: 19px;
}

.big {
  font-size: 18px;
}

.medium {
  font-size: 16px;
}

.small {
  font-size: max(10px, calc(6px * min(2, var(--scale))));
}

.center{
  text-align: center;
}

.textPdBottom{
  padding-bottom: calc(4px * var(--scale));
}

.descTextPd {
  padding-top: calc(4px * var(--scale));
  padding-right: calc(.55 * var(--scale) * var(--baseWidth));
  padding-bottom: calc(4px * var(--scale));

}

@media (max-width: 680px) {
  .descTextPd {
    padding-right: calc(0.35 * var(--scale) * var(--baseWidth));
  }
}

/* Section */
.section {
  position: relative;
  width: calc(var(--scale) * var(--baseWidth));
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  z-index: var(--mainLayer);
}

/* Card */
.card{
  position: relative;
  background: radial-gradient(circle, #323342, #232533);
  display: flex;
  box-sizing: border-box;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  border-radius: 4px;
}

.cardPdTop {
  padding-top: calc(7px * var(--scale));;
}

.cardPdBottom {
  padding-bottom: calc(22px * var(--scale));;
}

.cardPdLeft{
   padding-left: calc(20px * var(--scale));
}
/* ... */

